almost ready for deployment

--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev:full": "concurrently \"npm run dev\" \"cd backend && npm start\"",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "postbuild": "echo 'Build completed successfully'",
+    "lint": "eslint",
+    "db:init": "node -e \"require('./backend/database').initializeDatabase().then(() => console.log('Database initialized')).catch(console.error)\"",
+    "db:migrate": "echo 'Database migrations handled automatically on startup'",
+    "preinstall": "node preinstall.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -16,11 +20,13 @@
     "@types/react-datepicker": "^6.2.0",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.23.22",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "papaparse": "^5.5.3",
+    "pg": "^8.16.3",
     "qrcode.react": "^4.2.0",
     "react": "19.1.0",
     "react-datepicker": "^8.7.0",
@@ -37,6 +43,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/papaparse": "^5.3.16",
+    "@types/pg": "^8.15.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "concurrently": "^9.2.1",
