--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
+    "build": "echo 'No build step required for Node.js backend'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,6 +19,7 @@
     "dotenv": "^17.2.3",
     "express": "^4.18.0",
     "multer": "^2.0.2",
+    "pg": "^8.16.3",
     "puppeteer": "^24.23.0",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0"
